force-app/main/default/objects/SMS_Delivery_Report__c/SMS_Delivery_Report__c.object-meta.xml
<CustomObject>
    <label>SMS Delivery Report</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>SMS Delivery Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Delivery Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>