force-app/main/default/objects/SMS_Delivery_Report__c/fields/celco__c.field-meta.xml
<CustomField>
    <fullName>celco__c</fullName>
    <label>celco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>