force-app/main/default/objects/SMS_Delivery_Report__c/fields/customerId__c.field-meta.xml
<CustomField>
    <fullName>customerId__c</fullName>
    <label>customerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>