force-app/main/default/objects/SMS_Delivery_Report__c/fields/estado__c.field-meta.xml
<CustomField>
    <fullName>estado__c</fullName>
    <label>estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>