force-app/main/default/objects/SMS_Delivery_Report__c/fields/id_mensaje__c.field-meta.xml
<CustomField>
    <fullName>id_mensaje__c</fullName>
    <label>id_mensaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>