force-app/main/default/objects/SMS_Delivery_Report__c/fields/origen__c.field-meta.xml
<CustomField>
    <fullName>origen__c</fullName>
    <label>origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>